Your commit wwwwe

--- a/src/components/parc.scss
+++ b/src/components/parc.scss
@@ -47,7 +47,7 @@
     .title-underline {
       width: 100px;
       height: 4px;
-      background-color: #f8b135;
+      background-color: #ffffff;
       margin: 10px auto 0;
       
       @media (max-width: 768px) {
